examples/nohup.out
Traceback (most recent call last):
  File "/Users/avinashgupta/anaconda/lib/python2.7/runpy.py", line 165, in _run_module_as_main
    mod_name, loader, code, fname = _get_main_module_details(_Error)
  File "/Users/avinashgupta/anaconda/lib/python2.7/runpy.py", line 133, in _get_main_module_details
    return _get_module_details(main_name)
  File "/Users/avinashgupta/anaconda/lib/python2.7/runpy.py", line 119, in _get_module_details
    code = loader.get_code(mod_name)
  File "/Users/avinashgupta/anaconda/lib/python2.7/pkgutil.py", line 283, in get_code
    self.code = compile(source, self.filename, 'exec')
  File "/Users/avinashgupta/projects/spacy/spaCy/examples/keras_parikh_entailment/__main__.py", line 190
    print 'model: ', model
                  ^
SyntaxError: invalid syntax
